--- a/mvc/mvc/views/index.html
+++ b/mvc/mvc/views/index.html
@@ -16,7 +16,6 @@
 <!--Vista inicial-->
 
   <header class="py-5 bg-image-full" style="background-image: url('https://th.bing.com/th/id/OIP.QATDD-gOKv2c2M1D4bCuQgHaHa?pid=Api&rs=1');">
-    <img class="img-fluid d-block mx-auto" src="file:///C:/Users/52775/Downloads/undraw_welcome_cats_thqn.svg" width="500" height="1500">
   </header>
 
   <main role="main" class="container my-auto">
@@ -43,7 +42,7 @@
     <!--Insert-->
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-60 w-60">
-          <img class="card-img-top" src="file:///C:/Users/52775/Downloads/undraw_add_document_0hek.svg" height="200" width="150">
+          <img class="card-img-top" height="200" width="150">
           <div class="card-body"></div>
           <div class="card-footer">
             <a href="insert" class="btn " style="background:#75F5A5">Insertar</a>
@@ -53,7 +52,7 @@
     <!--List-->
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-60 w-60">
-          <img class="card-img-top" src="file:///C:/Users/52775/Downloads/undraw_to_do_list_a49b.svg" height="200" width="150">
+          <img class="card-img-top" height="200" width="150">
           <div class="card-body"></div>
           <div class="card-footer">
             <a href="list" class="btn " style="background:#75F5A5">Lista</a>
@@ -61,37 +60,7 @@
         </div>
       </div>
 
-      <!--View-->
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-60 w-60">
-          <img class="card-img-top" src="file:///C:/Users/52775/Downloads/undraw_online_friends_x73e.svg" height="200" width="150">
-          <div class="card-body"></div>
-          <div class="card-footer">
-            <a href="view" class="btn " style="background:#75F5A5">Vista</a>
-          </div>
-        </div>
-      </div>
-
-      <!--Update-->
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-60 w-60">
-          <img class="card-img-top" src="file:///C:/Users/52775/Downloads/undraw_status_update_jjgk.svg" height="200" width="150">
-          <div class="card-body"></div>
-          <div class="card-footer">
-            <a href="update" class="btn " style="background:#75F5A5">Actualizar</a>
-          </div>
-        </div>
-      </div>
-
-      <!--Delete-->
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-60 w-60">
-          <img class="card-img-top" src="file:///C:/Users/52775/Downloads/undraw_throw_away_ldjd.svg" height="240" width="150"></div>
-          <div class="card-footer">
-            <a href="delete" class="btn " style="background:#75F5A5">Delete</a>
-          </div>
-        </div>
-      </div>
+      
 
   </body>
 
