--- a/mvc/mvc/views/alumnos/delete.html
+++ b/mvc/mvc/views/alumnos/delete.html
@@ -1,16 +1,9 @@
-  <head>
-    <title>Delete</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  </head>
+$def with(result)
 
   <body>
     <!--Vista inicial-->
     <nav class="navbar navbar-expand-sm navbar-light" style="background-color: rgb(33, 184, 139);">
-        <a href="#" class="navbar-brand">Borrar</a>
+        <a href="#" class="navbar-brand">Delete</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -18,80 +11,58 @@
 
     <!-- Page Content -->
     <main role="main" class="container my-auto">
-      <br></br>
-        <table class="table">
-          <thead class="thead-ligth" style="background-color: rgb(33, 184, 139);">
-            <tr>
-              <th scope="col">Matricula</th>
-              <th scope="col">Nombre</th>
-              <th scope="col">Primer Apellido</th>
-              <th scope="col">Segundo Apellido</th>
-              <th scope="col">Edad</th>
-              <th scope="col">Fecha de Nacimiento</th>
-              <th scope="col">Sexo</th>
-              <th scope="col">Estado</th>
-              <th scope="col">Borrar</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>
-                <button type="button" class="btn" style="background:#75F5A5">Borrar</button>
-              </td>
-              
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>
-                <button type="button" class="btn" style="background:#75F5A5">Borrar</button>
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>
-                <button type="button" class="btn" style="background:#75F5A5">Borrar</button>
-              </td>
-            </tr>
-            <tr>
-                <th scope="row">4</th>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>
-                    <button type="button" class="btn" style="background:#75F5A5">Borrar</button>
-                </td>
-            </tr>
-          </tbody>
-        </table>
+    <br></br>
 
-    <div style="width: 500px;">
-        <a href="/"><button type="button" class="btn" style="background:#dd4040">Regresar</button></a>
+    <form method="POST" action="">
+      
+      <div class="form-group">
+        <label for="Nombre">Nombre del alumno</label>
+        <input type="text" readonly class="form-control" id="Nombre" name="Nombre" value="$result['Nombre']">
+      </div>
+
+      <div class="form-group">
+        <label for="Apellido1">Apellido paterno del alumno</label>
+        <input type="text" readonly class="form-control" id="Apellido1" name="Apellido1" value="$result['lastname']">
+      </div>
+
+      <div class="form-group">
+        <label for="Apellido2">Apellido materno del alumno</label>
+        <input type="text" readonly class="form-control" id="Apellido2" name="Apellido2" value="$result['lastname2']">
+      </div>
+
+      <div class="form-group">
+        <label for="Matricula">Matricula del alumno</label>
+        <input type="text" readonly class="form-control" id="Matricula" name="Matricula" value="$result['Matricula']">
+      </div>
+
+      <div class="form-group">
+        <label for="Edad">Edad del alumno</label>
+        <input type="text" readonly class="form-control" id="Edad" name="Edad" value="$result['Edad']">
+      </div>
+
+      <div class="form-group">
+        <label for="Fecha">Fecha de nacimiento del alumno</label>
+        <input type="text" readonly class="form-control" id="Fecha" name="Fecha" value="$result['Fecha']">
+      </div>
+
+      <div class="form-group">
+        <label for="Sexo">Sexo del alumno</label>
+        <input type="text" readonly class="form-control" id="Sexo" name="Sexo" value="$result['Sexo']">
+      </div>
+
+      <div class="form-group">
+        <label for="Estado">Estado civil del alumno</label>
+        <input type="text" readonly class="form-control" id="Estado" name="Estado" value="$result['Estado']">
+      </div>
+
+      <div style="width: 500px;">
+        <a href="list"><button type="button" class="btn" style="background:rgb(33, 184, 139)">Regresar</button></a>
     </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">Delete</button>
+    </div>
+    </form>
 
+    <br></br>
   </body>
+</html>
