--- a/mvc/mvc/views/alumnos/list.html
+++ b/mvc/mvc/views/alumnos/list.html
@@ -27,13 +27,15 @@ $def with(result)
               <th scope="col">Fecha de Nacimiento</th>
               <th scope="col">Sexo</th>
               <th scope="col">Estado</th>
+              <th scope="col">Update</th>
+              <th scope="col">Delete</th>
             </tr>
           </thead>
           <tbody>
             $for row in result:
               <tr>
                 <th scope="row">$row['id_alumno']</th>
-                <td>$row['Nombre']</td>
+                <td><a href="/view/$row['Matricula']">$row['Nombre']</a></td>
                 <td>$row['lastname']</td>
                 <td>$row['lastname2']</td>
                 <td>$row['Matricula']</td>
@@ -41,11 +43,15 @@ $def with(result)
                 <td>$row['Fecha']</td>
                 <td>$row['Sexo']</td>
                 <td>$row['Estado']</td>
+                <td>
+                  <a href="/update/$row['Matricula']"><button type= "button" class="btn" style="background: #75F5A5">Update</button></a></td>
+                  <td>
+                    <a href="/delete/$row['Matricula']"><button type= "button" class="btn" style="background: #75F5A5">Delete</button></a></td>
               </tr>
           </tbody>
         </table>
 
-    <div style="width: 500px;">
+    <!--<div style="width: 500px;">
         <a href="insert"><button type="button" class="btn" style="background:#75F5A5">Insert</button></a>
 
         <a href="view"><button type="button" class="btn" style="background:#75F5A5">View</button></a>
@@ -55,5 +61,5 @@ $def with(result)
         <a href="delete"><button type="button" class="btn" style="background:#75F5A5">Delete</button></a>
 
         <a href="/"><button type="button" class="btn" style="background:#75F5A5">Regresar</button></a>
-    </div>
+    </div>-->
   </body>
