--- a/mvc/mvc/views/alumnos/view.html
+++ b/mvc/mvc/views/alumnos/view.html
@@ -1,12 +1,9 @@
-
-  <head>
-    <title>View</title>
-  </head>
+$def with(result)
 
   <body>
     <!--Vista inicial-->
     <nav class="navbar navbar-expand-sm navbar-light" style="background-color: rgb(33, 184, 139);">
-        <a href="#" class="navbar-brand">Vista</a>
+        <a href="#" class="navbar-brand">View Data</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -14,57 +11,54 @@
 
     <!-- Page Content -->
     <main role="main" class="container my-auto">
-      <br></br>
-        <table class="table">
-            <thead class="thead-ligth" style="background-color: rgb(33, 184, 139);">
-            <tr>
-              <th scope="col">Matricula</th>
-              <th scope="col">Nombre</th>
-              <th scope="col">Primer Apellido</th>
-              <th scope="col">Segundo Apellido</th>
-              <th scope="col">Edad</th>
-              <th scope="col">Fecha de Nacimiento</th>
-              <th scope="col">Sexo</th>
-              <th scope="col">Estado</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-              <td>      </td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-                <td>      </td>
-            </tr>
-            <tr>
-          </tbody>
-        </table>
+    <br></br>
+
+    <form>
+      
+      <div class="form-group">
+        <label for="Nombre">Nombre del alumno</label>
+        <input type="text" readonly class="form-control" id="Nombre" name="Nombre" value="$result['Nombre']">
+      </div>
+
+      <div class="form-group">
+        <label for="Apellido1">Apellido paterno del alumno</label>
+        <input type="text" readonly class="form-control" id="Apellido1" name="Apellido1" value="$result['lastname']">
+      </div>
+
+      <div class="form-group">
+        <label for="Apellido2">Apellido materno del alumno</label>
+        <input type="text" readonly class="form-control" id="Apellido2" name="Apellido2" value="$result['lastname2']">
+      </div>
+
+      <div class="form-group">
+        <label for="Matricula">Matricula del alumno</label>
+        <input type="text" readonly class="form-control" id="Matricula" name="Matricula" value="$result['Matricula']">
+      </div>
+
+      <div class="form-group">
+        <label for="Edad">Edad del alumno</label>
+        <input type="text" readonly class="form-control" id="Edad" name="Edad" value="$result['Edad']">
+      </div>
+
+      <div class="form-group">
+        <label for="Fecha">Fecha de nacimiento del alumno</label>
+        <input type="text" readonly class="form-control" id="Fecha" name="Fecha" value="$result['Fecha']">
+      </div>
+
+      <div class="form-group">
+        <label for="Sexo">Sexo del alumno</label>
+        <input type="text" readonly class="form-control" id="Sexo" name="Sexo" value="$result['Sexo']">
+      </div>
+
+      <div class="form-group">
+        <label for="Estado">Estado civil del alumno</label>
+        <input type="text" readonly class="form-control" id="Estado" name="Estado" value="$result['Estado']">
+      </div>
+    </form>
 
     <div style="width: 500px;">
-        <a href="/"><button type="button" class="btn" style="background:#dd4040">Regresar</button></a>
+        <a href="/"><button type="button" class="btn" style="background:rgb(33, 184, 139)">Regresar</button></a>
     </div>
-
+    <br></br>
   </body>
+</html>
